--- a/app/src/main/res/values-v21/strings.xml
+++ b/app/src/main/res/values-v21/strings.xml
@@ -3,6 +3,6 @@
 
     <string name="app_name">Bonjour Madame</string>
     <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_remove">Remove</string>
 
 </resources>
