--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="wallpaper_added_to_favourites_toast_message">Madame added to favourites!</string>
     <string name="previous_wallpaper_set_toast_message">Previous wallpaper set!</string>
     <string name="undo_toast_text">Undo</string>
+    <string name="start">Start</string>
+    <string name="favourites">Favourites</string>
+    <string name="history">History</string>
 </resources>
